--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -6,6 +6,7 @@
   color: #fff;
   display: flex;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+  /*Ноль можно писать без единиц измерений*/
 }
 
 .header-title {
@@ -49,6 +50,7 @@
 /* .header-list-item a:first-child {
     border-right: 2px solid #dbe2ef;
   } */
+/* Закомментированные стили убрать*/
 
 [href="/tasks"]::after {
   content: "";
