--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -1,3 +1,5 @@
+/*Разделить стили для каждого компонента*/
+
 .modal {
   height: 100vh;
   width: 100vw;
@@ -24,6 +26,7 @@
   padding: 24px;
   background: #dbe2ef;
   box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.5);
+  /*Ноль можно писать без единиц измерений*/
   border-radius: 4px;
 }
 
